--- a/contact.htm
+++ b/contact.htm
@@ -11,7 +11,7 @@
 <div id="nav">
    <h1>NAVIGATION</h1>
    <div id="insidenav">
-    <a href="/index.htm">HOME</a><br>
+    <a href="/index.html">HOME</a><br>
     <a href="/about.htm">ABOUT</a><br>
     <a href="/pub.htm">PUBLISHED WORK</a><br>
     <a href="/resume.pdf">RESUME</a><br>
