--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <div id="stuff">
 <img class="logo" src="bode.png" alt="it's me">
-   <p><a href="about.htm">ABOUT</a> <a href="pub.htm">PUBLICATIONS</a> <a href="resume.pdf">RESUME</a> <a href="contact.htm">CONTACT</a></p>
+   <p><a href="about.htm">ABOUT</a> <a href="pub.htm">PUBLICATIONS</a> <a href="resume.pdf" target="_blank">RESUME</a> <a href="contact.htm">CONTACT</a></p>
 
 
 </body>
