--- a/about.htm
+++ b/about.htm
@@ -6,14 +6,14 @@
 <div id="logo">
 <img class="name" src="smolbode.png" /></div>
 <div id="wrapper">
-<div id="sitecredit">this site, its code, and all materials on it © bodie shanis 2018</div></div>
+<div id="sitecredit">© bodie shanis 2018</div></div>
 <div id="nav">
    <h1>NAVIGATION</h1>
    <div id="insidenav">
     <a href="/index.html">HOME</a><br>
     <a href="/about.htm">ABOUT</a><br>
     <a href="/pub.htm">PUBLISHED WORK</a><br>
-    <a href="/resume.pdf">RESUME</a><br>
+    <a href="/resume.pdf" target="_blank">RESUME</a><br>
     <a href="/contact.htm">CONTACT</a><br>
    </div></div>
 <div id="stuff">
