--- a/contact.htm
+++ b/contact.htm
@@ -19,24 +19,9 @@
    </div></div>
 <div id="stuff">
 <h2>COME SAY HI!</h2>
-   <div id="p">Email: bodieshanis@gmail.com<br>Phone: 610-844-6517</div><br>
+   <div id="p">Email: bodieshanis@gmail.com<br>Phone: 610-844-6517<br><br>Bodie is currently available for freelance writing and editing work. Feel free to contact him with professional queries or just to say hi!<br><br>
 
-<div id="p"><div class="container">
-  <form action="action_page.php">
-
-    <label for="fname">Name</label><br>
-    <input type="text" id="fname" name="firstname" placeholder="Who are you?"><br><br>
-
-    <label for="lname">Email address</label><br>
-    <input type="text" id="lname" name="lastname" placeholder="How can I contact you?"><br><br>
-
-    <label for="lname">Subject</label><br>
-    <input type="text" id="lname" name="lastname" placeholder="What's going on?"><br><br>
-
-    <label for="subject">Message</label><br>
-    <textarea id="subject" name="subject" placeholder="What's up?" style="height:200px"></textarea>
-
-    <input type="submit" value="Submit"></div>
+  <a href="mailto:me@company.com">Click here to send me your thoughts!</a></div>
 
   </form>
 </div>
