--- a/pub.htm
+++ b/pub.htm
@@ -20,7 +20,7 @@
 <div id="stuff">
 <h2>BUBBLEBLABBER</h2>
    <div id="p"><a href="https://www.bubbleblabber.com/author/bodie/">Bubbleblabber.com</a>
-   is a leading source of animation news and reviews. Bodie currently writes for them as a freelance anime critic.<br><br><a href="https://www.bubbleblabber.com/english-dub-series-review-fate-extra-last-encore/">Click here to read a sample review!</a><br><br>
+   is a leading source of animation news and reviews. Bodie currently writes for them as a freelance critic/editorialist.<br><br>Click the links to read some sample articles!<br>- <a href="https://www.bubbleblabber.com/english-dub-series-review-fate-extra-last-encore/">"Fate/Extra Last Encore" review</a><br>- <a href="https://www.bubbleblabber.com/south-park-gets-season-22-start-date-two-comic-con-attractions/">"South Park" news blurb</a><br><br>
 
    <h2>OUR VOICE MAGAZINE</h2>
    <div id="p"><a href="https://ourvoicemagazine.wixsite.com/ezine/">Our Voice</a> is a digital magazine that offers LGBT+ people a place to discuss their own community and issues. Bodie was a contributor to the fifth issue of the magazine, tasked with researching and writing an educational article about transgender hormone replacement therapy.<br><br>This issue is still in publication, but a link will be posted upon its completion.<br><br>
